# mmwave_slam

./: README.md
post_processing/: post_processing.py
ros_pkgs/ira_laser_tools/launch/: 3laser_merger.launch
ros_pkgs/mmwave_navigation/: package.xml
ros_pkgs/mmwave_navigation/launch/: my_amcl.launch  my_move_base.launch
ros_pkgs/mmwave_navigation/maps/: mappa_16_1.pgm  mappa_16_1.yaml  mappa_16_2.pgm  mappa_16_2.yaml  mappa_3.pgm  mappa_3.yaml  mappa_buon7.pgm  mappa_buon7.yaml  mappa_buona.pgm  mappa_buona.yaml  mappa_filtro.pgm  mappa_filtro.yaml  mappa_filtro2.pgm  mappa_filtro2.yaml  mappa_filtro3.pgm  mappa_filtro3.yaml
ros_pkgs/mmwave_navigation/param/: costmap_common_params_custom.yaml  dwa_local_planner_params_custom.yaml  global_costmap_params_my.yaml  local_costmap_params_my.yaml
ros_pkgs/mmwave_slam/: package.xml
ros_pkgs/mmwave_slam/config/: 2_gmapping_params.yaml  my_lds_3d.lua
ros_pkgs/mmwave_slam/launch/: filtered_my_gmapping.launch  my_gmapping.launch  my_hector.launch
ros_pkgs/pointcloud_to_laserscan/cmake/: pointcloud_to_laserscanConfig.cmake
ros_pkgs/pointcloud_to_laserscan/launch/: 3point2laser.launch
ros_pkgs/ros_to_canfd/: CMakeLists.txt  package.xml
ros_pkgs/ros_to_canfd/launch/: onlymove.launch  ros_to_canfd_odom.launch
ros_pkgs/ros_to_canfd/src/: canfd_protocol.py  canfd_protocol_odom.py  (+3 more)
ros_pkgs/rviz/: config_2sensors.rviz  config_final.rviz
ros_pkgs/scripts/: publish_vel.py  ransac.py  scan_cluster.py  scan_filter.py  scan_filter_offline_debug.py
ros_pkgs/ti_mmwave_rospkg/: CMakeLists.txt  README.md  package.xml
(+21 files in other folders)
