<?xml version="1.0"?>
<package format="2">
  <name>mmwave_navigation</name>
  <version>1.0</version>
  <description>
    The mmwave_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="nicola.pace97@gmail.com">Nicola Pace</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
