<?xml version="1.0"?>
<package format="2">
  <name>mmwave_slam</name>
  <version>1.0</version>
  <description>
    The mmwave_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="nicola.pace97@gmail.com">Nicola Pace</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
